Test dependencies #56